--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/antlr-3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-temporal-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.1-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jiffle-1.0-20091221.120011-3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/netcdf-java-4.0.41.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/opendap-2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/utils-1.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/zonalstats-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-api-4.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/avalon-framework-impl-4.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-anim-1.7.jar"/>
@@ -43,48 +31,48 @@
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-M1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-jp2k-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-svg-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-kml-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-common-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-h2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-db2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-mysql-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-oracle-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-postgis-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-jp2k-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-process-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-referencing-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-render-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-shapefile-renderer-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-svg-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-validation-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wms-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xml-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-core-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-filter-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml2-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-gml3-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-kml-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-xsd-wps-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.1.104.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb-1.8.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-arcgrid-1.0.5.jar"/>
@@ -106,7 +94,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/joda-time-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsqlparser-0.3.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr-275-1.0-beta-2.jar"/>
@@ -114,10 +102,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/jts-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/miglayout-3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.ows-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wfs-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/net.opengis.wps-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.w3.xlink-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/vecmath-1.3.2.jar"/>
@@ -128,8 +116,20 @@
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-client-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xmlrpc-common-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.3.4.O.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-temporal-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-customstreams-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-netcdf-core-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jiffle-1.0-20091221.120011-3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/netcdf-java-4.0.41.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opendap-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/utils-1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/zonalstats-1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-geocore-1.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
