--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -99,7 +99,6 @@ bin.includes = library.jar,\
                lib/jaxb-impl-1.3.jar,\
                lib/jcommon-1.0.13.jar,\
                lib/jdom-1.0.jar,\
-               lib/jfreechart-1.0.10.jar,\
                lib/joda-time-1.6.jar,\
                lib/jsqlparser-0.3.14.jar,\
                lib/jsr-275-1.0-beta-2.jar,\
@@ -135,7 +134,8 @@ bin.includes = library.jar,\
                lib/zonalstats-1.0-SNAPSHOT.jar,\
                lib/imageio-ext-geocore-1.1-SNAPSHOT.jar,\
                lib/slf4j-api-1.5.6.jar,\
-               lib/slf4j-log4j12-1.5.6.jar
+               lib/slf4j-log4j12-1.5.6.jar,\
+               lib/jfreechart-1.0.13.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
