--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -8,7 +8,10 @@ bin.includes = library.jar,\
                LICENSE.txt,\
                plugin_ko.properties,\
                epsg.properties,\
-               lib/
+               lib/,\
+               lib/jiffle-1.0-SNAPSHOT.jar,\
+               lib/utils-1.0-SNAPSHOT.jar,\
+               lib/zonalstats-1.0-SNAPSHOT.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
